fixed scrollbar overwriting window borders on wayland

--- a/src/Mint-L/gtk-3.0/gtk-dark.css
+++ b/src/Mint-L/gtk-3.0/gtk-dark.css
@@ -1744,6 +1744,7 @@ notebook {
       padding: 2px; }
 
 scrollbar {
+  border: 1px solid transparent;
   background-color: #3d3d3d;
   transition: 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
   * {
