--- a/src/Mint-L/gtk-3.0/gtk-darker.css
+++ b/src/Mint-L/gtk-3.0/gtk-darker.css
@@ -1743,6 +1743,7 @@ notebook {
       padding: 2px; }
 
 scrollbar {
+  border: 1px solid transparent;
   background-color: #fcfcfc;
   transition: 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
   * {
